# PayTx

./: .gitignore
paytx/: Cargo.toml
paytx/mandos/: empty.scen.json
paytx/meta/: Cargo.toml
paytx/meta/src/: main.rs
paytx/src/: empty.rs
paytx/tests/: empty_mandos_rs_test.rs  empty_rust_test.rs
paytx/wasm/: Cargo.toml
paytx/wasm/src/: lib.rs
